+`wrapEmoji` common method. Avoid skull-and-crossbones ASCII character from unicode circa 1993 which doesn't like to render as emoji. I must be missing something. ¯\_(ツ)_/¯ More fiddling with battle-over letters, active vs. open - mobile + portrait.

--- a/css/aa.css
+++ b/css/aa.css
@@ -6077,8 +6077,11 @@ body.game-paused #tutorial-window {
 }
 
 @media screen and (orientation: portrait) {
-  /* pull letter down further on mobile + portrait, so "midnight oasis" letter fits on iOS Safari screen. */
   body.is-mobile #battle-over-letter.active {
+    transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
+  }
+  /* pull letter down further on mobile + portrait, so "midnight oasis" letter fits on iOS Safari screen. */
+  body.is-mobile #battle-over-letter.open {
     transform: translate3d(-50%, -25%, 0) scale3d(1, 1, 1);
   }
 }
